[package]
name = "cost-of-life-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5"
env_logger = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"
rusqlite = { version = "0.30", features = ["bundled"] }
log = "0.4"
actix-web-httpauth = "0.8"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4"
